--- a/index.html
+++ b/index.html
@@ -8,57 +8,55 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
-        <div class="row clearfix">
-          <nav class="site-navigation row__col row__col--s7">
-            <ul class="site-navigation__list clearfix">
-              <li class="site-navigation__item">
-                <a href="#">Информация</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Новости</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Прайс-лист</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="shop.html">Магазин</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Контакты</a>
-              </li>
-            </ul>
-          </nav>
+      <div class="container clearfix">
+        <nav class="site-navigation column column--x7">
+          <ul class="site-navigation__list clearfix">
+            <li class="site-navigation__item">
+              <a href="#">Информация</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Новости</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Прайс-лист</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="shop.html">Магазин</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-          <div class="user row__col row__col--s5 clearfix">
-            <a class="user__login" href="#">Вход</a>
-          </div>
+        <div class="user column column--x5 clearfix">
+          <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
 
     <main class="container">
-      <div class="logo logo--index row">
+      <div class="logo logo--index">
         <img src="img/pic__logo--index.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
 
-      <div class="features row clearfix">
-        <div class="features__item row__col row__col--s4">
+      <div class="features clearfix">
+        <div class="features__item column column--x4">
           <p class="features__text features__text--title">Быстро</p>
           <p class="features__text">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
         </div>
-        <div class="features__item row__col row__col--s4">
+        <div class="features__item column column--x4">
           <p class="features__text features__text--title">Круто</p>
           <p class="features__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </div>
-        <div class="features__item row__col row__col--s4">
+        <div class="features__item column column--x4">
           <p class="features__text features__text--title">Дорого</p>
           <p class="features__text">Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </div>
 
-      <div class="content content--index row clearfix">
-        <div class="content__column content__column--left row__col row__col--s6 clearfix">
+      <div class="content content--index clearfix">
+        <div class="content__column content__column--left column column--x6 clearfix">
           <h2 class="content__title">Новости</h2>
           <ul class="content__list">
             <li class="content__item">
@@ -73,7 +71,7 @@
           <a class="btn" href="#">Все новости</a>
         </div>
 
-        <div class="content__column content__column--right row__col row__col--s6 clearfix">
+        <div class="content__column content__column--right column column--x6 clearfix">
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
@@ -85,8 +83,8 @@
         </div>
       </div>
 
-      <div class="content content--index row clearfix">
-        <div class="content__column content__column--left row__col row__col--s6 clearfix">
+      <div class="content content--index clearfix">
+        <div class="content__column content__column--left column column--x6 clearfix">
           <h2 class="content__title">Контактная информация</h2>
           <p class="content__text">
             Барбершоп «Бородинский»<br>
@@ -102,7 +100,7 @@
           <a class="btn" href="#">Обратная связь</a>
         </div>
 
-        <div class="content__column content__column--right row__col row__col--s6">
+        <div class="content__column content__column--right column column--x6">
           <h2 class="content__title">Записаться</h2>
           <p class="content__text">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
           <form class="appointment-form clearfix" action="https://echo.htmlacademy.ru" method="post">
@@ -127,29 +125,27 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <div class="row clearfix">
-          <section class="contacts row__col row__col--s5">
-            <p class="contacts__title">Барбершоп «Бородинский»</p>
-            <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-            <p class="contacts__link">
-              <a href="#">Как нас найти?</a>
-            </p>
-            <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
-          </section>
+      <div class="container clearfix">
+        <section class="contacts column column--x5">
+          <p class="contacts__title">Барбершоп «Бородинский»</p>
+          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__link">
+            <a href="#">Как нас найти?</a>
+          </p>
+          <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
+        </section>
 
-          <section class="social row__col row__col--s2 clearfix">
-            <p class="social__text">Давайте дружить!</p>
-            <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
-            <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
-            <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
-          </section>
+        <section class="social column column--x2 clearfix">
+          <p class="social__text">Давайте дружить!</p>
+          <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
+          <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
+          <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
+        </section>
 
-          <section class="copyright row__col row__col--s5">
-            <p class="copyright__text">Разработано:</p>
-            <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
-          </section>
-        </div>
+        <section class="copyright column column--x5">
+          <p class="copyright__text">Разработано:</p>
+          <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
+        </section>
       </div>
     </footer>
   </body>
