--- a/item.html
+++ b/item.html
@@ -8,133 +8,120 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
-        <div class="row clearfix">
-          <nav class="site-navigation row__col row__col--s9">
-            <ul class="site-navigation__list clearfix">
-              <li class="site-navigation__item">
-                <div class="logo logo--nav">
-                  <a href="index.html">
-                    <img src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
-                  </a>
-                </div>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Информация</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Новости</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Прайс-лист</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="shop.html">Магазин</a>
-              </li>
-              <li class="site-navigation__item">
-                <a href="#">Контакты</a>
-              </li>
-            </ul>
-          </nav>
+      <div class="container clearfix">
+        <nav class="site-navigation column column--x9">
+          <ul class="site-navigation__list clearfix">
+            <li class="site-navigation__item">
+              <div class="logo logo--nav">
+                <a href="index.html">
+                  <img src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
+                </a>
+              </div>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Информация</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Новости</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Прайс-лист</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="shop.html">Магазин</a>
+            </li>
+            <li class="site-navigation__item">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-          <div class="user row__col row__col--s3 clearfix">
-            <a class="user__login" href="#">Вход</a>
-          </div>
+        <div class="user column column--x3 clearfix">
+          <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
 
-    <main class="container">
-      <header class="page-header row">
-        <div class="row clearfix">
-          <h1 class="page-header__title row__col row__col--s12">Набор для путешествий &#171;Baxter of California&#187;</h1>
-        </div>
-        <div class="row clearfix">
-          <ul class="breadcrumbs row__col row__col--s12">
-            <li class="breadcrumbs__item">
-              <a href="index.html">Главная</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a href="shop.html">Магазин</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a href="#">Средства для ухода</a>
-            </li>
-            <li class="breadcrumbs__item">
-              Набор для путешествий &#171;Baxter of California&#187;
-            </li>
-          </ul>
-        </div>
+    <main class="container clearfix">
+      <header class="page-header">
+        <h1 class="page-header__title">Набор для путешествий &#171;Baxter of California&#187;</h1>
+        <ul class="breadcrumbs clearfix">
+          <li class="breadcrumbs__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a href="shop.html">Магазин</a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a href="#">Средства для ухода</a>
+          </li>
+          <li class="breadcrumbs__item">
+            Набор для путешествий &#171;Baxter of California&#187;
+          </li>
+        </ul>
       </header>
 
-      <div class="row clearfix">
-        <section class="images row__col row__col--s6">
-          <div class="image image--main row">
-            <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
-          </div>
+      <section class="images column column--x6 clearfix">
+        <div class="image image--main">
+          <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="450" height="500" alt="Набор для путешествий &#171;Baxter of California&#187;">
+        </div>
+        <div class="image column column--x4">
+          <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+        </div>
+        <div class="image column column--x4">
+          <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+        </div>
+        <div class="image column column--x4">
+          <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+        </div>
+      </section>
 
-          <div class="row clearfix">
-            <div class="image row__col row__col--s4">
-              <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
-            </div>
-            <div class="image row__col row__col--s4">
-              <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
-            </div>
-            <div class="image row__col row__col--s4">
-              <img src="img/pic__item--set_travel_baxter_of_california_3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
-            </div>
-          </div>
+      <div class="column column--x6">
+        <section class="description">
+          <span class="description__available-status">Есть в наличии</span>
+          <span class="description__vendor-code">Артикул: Dexter-AE</span>
+          <p class="description__text">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится всё,
+            что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
+            крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <span class="description__price">2 900 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
         </section>
 
-        <div class="row__col row__col--s6">
-          <section class="description">
-            <span class="description__available-status">Есть в наличии</span>
-            <span class="description__vendor-code">Артикул: Dexter-AE</span>
-            <p class="description__text">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится всё,
-              что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
-              крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-            <span class="description__price">2 900 руб.</span>
-            <a class="btn btn--buy" href="#">Купить</a>
-          </section>
-
-          <section class="composition">
-            <h2 class="composition__title">В набор входят:</h2>
-            <ul class="composition__list">
-              <li class="composition__item">Средство для умывания (50 мл)</li>
-              <li class="composition__item">Увлажняющий крем (50 мл)</li>
-              <li class="composition__item">Крем для бритья (50 мл)</li>
-              <li class="composition__item">Крем после бритья, шампунь (50 мл)</li>
-              <li class="composition__item">Удобная кожаная косметичка</li>
-            </ul>
-          </section>
-        </div>
+        <section class="composition">
+          <h2 class="composition__title">В набор входят:</h2>
+          <ul class="composition__list">
+            <li class="composition__item">Средство для умывания (50 мл)</li>
+            <li class="composition__item">Увлажняющий крем (50 мл)</li>
+            <li class="composition__item">Крем для бритья (50 мл)</li>
+            <li class="composition__item">Крем после бритья, шампунь (50 мл)</li>
+            <li class="composition__item">Удобная кожаная косметичка</li>
+          </ul>
+        </section>
       </div>
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <div class="row clearfix">
-          <section class="contacts row__col row__col--s5">
-            <p class="contacts__title">Барбершоп «Бородинский»</p>
-            <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-            <p class="contacts__link">
-              <a href="#">Как нас найти?</a>
-            </p>
-            <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
-          </section>
+      <div class="container clearfix">
+        <section class="contacts column column--x5">
+          <p class="contacts__title">Барбершоп «Бородинский»</p>
+          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__link">
+            <a href="#">Как нас найти?</a>
+          </p>
+          <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
+        </section>
 
-          <section class="social row__col row__col--s2 clearfix">
-            <p class="social__text">Давайте дружить!</p>
-            <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
-            <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
-            <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
-          </section>
+        <section class="social column column--x2 clearfix">
+          <p class="social__text">Давайте дружить!</p>
+          <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
+          <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
+          <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
+        </section>
 
-          <section class="copyright row__col row__col--s5">
-            <p class="copyright__text">Разработано:</p>
-            <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
-          </section>
-        </div>
+        <section class="copyright column column--x5">
+          <p class="copyright__text">Разработано:</p>
+          <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
+        </section>
       </div>
     </footer>
   </body>
